add new javascript variables for form inputs

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   <body>
     <div class="container jumbotron">
       <h1>Vacation Destination Quiz</h1>
-      <!-- <h2>Fill out the Questionaire below to discover your dream vacation destination!</h2> -->
+      <h2>Fill out the Questionaire below to discover your dream vacation destination!</h2>
     </div>
     <div class="container">
-      <!-- <h4>Fill in the fields below:</h4> -->
-      <!-- <form id="quiz">
+      <h4>Fill in the fields below:</h4>
+     <form id="quiz">
         <div class="form-group">
           <label for="age">How old are you?</label>
           <input type="text" class="form-control" id="age" placeholder="Age Number">
-        </div> -->
-        <!-- <div class="form-group">
+        </div>
+        <div class="form-group">
           <label for="days">How many days can you take off?</label>
           <input type="text" class="form-control" id="days" placeholder="Number of Days">
         </div>
@@ -35,10 +35,10 @@
         <div class="form-group">
           <label for="fun">On a scale of 1-10 how fun are you? (ex: 1 is no fun and 10 is super fun)</label>
           <input type="text" class="form-control" id="fun" placeholder="Enter fun level">
-        </div> -->
-        <!-- <button type="submit" class="btn btn-default">Submit</button>
+        </div>
+       <button type="submit" class="btn btn-default">Submit</button>
       </form>
-    </div> -->
+    </div>
 
     <div class="container">
       <div id="results">
