create javascript variables assigned to html form

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <img src="img/japan.jpg" alt="image of japan">
         </div>
         <div id="lakeoswego">
-          <h4>You should go to Lake Oswego!</h4>
+          <h4>You don't need a vacation. You should probably just put a down payment on a Mansion in Lake Oswego.</h4>
           <img src="img/lakeoswego.jpg" alt="image of lake oswego">
         </div>
         <div id="lasvegas">
@@ -75,7 +75,7 @@
           <img src="img/seattle.jpg" alt="image of seattle">
         </div>
         <div id="staycation">
-          <h4>You should go on a staycation!</h4>
+          <h4>Whether it's your age, budget, fun level, or some other reason... We're getting the distinct feeling you should take a staycation this year!</h4>
           <img src="img/staycation.jpg" alt="image of staycation">
         </div>
       </div>
