return 4 of 4 destinations

--- a/index.html
+++ b/index.html
@@ -42,10 +42,6 @@
 
     <div class="container">
       <div id="results">
-        <div id="cancun">
-          <h4>You should go to Cancun!</h4>
-          <img src="img/cancun.jpg" alt="image of cancun">
-        </div>
         <div id="japan">
           <h4>You should go to Japan!</h4>
           <img src="img/japan.jpg" alt="image of japan">
@@ -58,24 +54,12 @@
           <h4>You should go to Las Vegas!</h4>
           <img src="img/lasvegas.jpg" alt="image of las vegas">
         </div>
-        <div id="newyork">
-          <h4>You should go to New York!</h4>
-          <img src="img/newyork.jpg" alt="image of new york">
-        </div>
         <div id="paris">
           <h4>You should go to Paris!</h4>
           <img src="img/paris.jpg" alt="image of paris">
         </div>
-        <div id="roadtrip">
-          <h4>You should take a Road Trip!</h4>
-          <img src="img/roadtrip.jpg" alt="image of roadtrip">
-        </div>
-        <div id="seattle">
-          <h4>You should go to Seattle!</h4>
-          <img src="img/seattle.jpg" alt="image of seattle">
-        </div>
         <div id="staycation">
-          <h4>Whether it's your age, budget, fun level, or some other reason... We're getting the distinct feeling you should take a staycation this year!</h4>
+          <h4>Whether it's your age, budget, fun level, or some other reason... We're getting the distinct feeling you should take a "staycation" this year!</h4>
           <img src="img/staycation.jpg" alt="image of staycation">
         </div>
       </div>
@@ -84,3 +68,20 @@
 
   </body>
 </html>
+
+<!-- <div id="cancun">
+  <h4>You should go to Cancun!</h4>
+  <img src="img/cancun.jpg" alt="image of cancun">
+</div>
+<div id="seattle">
+  <h4>You should go to Seattle!</h4>
+  <img src="img/seattle.jpg" alt="image of seattle">
+</div>
+<div id="roadtrip">
+  <h4>You should take a Road Trip!</h4>
+  <img src="img/roadtrip.jpg" alt="image of roadtrip">
+</div>
+<div id="newyork">
+  <h4>You should go to New York!</h4>
+  <img src="img/newyork.jpg" alt="image of new york">
+</div> -->
